# chacha20_circuit

./: Cargo.toml  README.md
benches/: chacha20_circuit.rs
src/: chacha20_circuit.rs  chacha20_circuit_v1.rs  chacha20_v1.rs  circuit_tests.rs  constants.rs  lib.rs  main.rs  utilities.rs
src/tests/: test_data.rs
