[package]
name = "halo2_chacha20"
version = "0.1.0"
edition = "2021"

[lib]
name = "halo2_chacha20"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
chacha20 = "0.9.1"
group = "0.13"
ff = "0.13"
extend = "1.2.0"
halo2_proofs = { version = "0.3.0", features = ["dev-graph"] }
plotters = "0.3.4"
rand_core = "0.6.4"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
rand = "0.8.5"
hex = "0.4.3"
aead = "0.6.0-pre.0"
hex-literal = "0.4.1"
crypto = "0.5.1"
criterion = "0.3"  # for benchmarking
aes = "0.8"
bitvec = "1"
blake2b_simd = "=1.0.1" # Last version required rust 1.66
fpe = "0.6"
halo2_gadgets = { git = "https://github.com/QED-it/halo2", branch = "zsa1" }
k256 = { version = "0.13.0", features = ["arithmetic", "schnorr"] }
lazy_static = "1"
memuse = { version = "0.2.1", features = ["nonempty"] }
pasta_curves = "0.5"
proptest = { version = "1.0.0", optional = true }
reddsa = "0.5"
nonempty = "0.7"
subtle = "2.3"
zcash_note_encryption_zsa = { package = "zcash_note_encryption", version = "0.4", git = "https://github.com/QED-it/zcash_note_encryption", branch = "zsa1" }
incrementalmerkletree = "0.5"
zcash_spec = "0.1"
zip32 = "0.1"
rayon = "1.10.0"
